fixed projects goals' dots to appear behind text

--- a/style/goal-of-the-project.css
+++ b/style/goal-of-the-project.css
@@ -56,6 +56,7 @@
     position: absolute;
     height: 100%;
     top: 230px;
+    z-index: -2;
 }
 
 .blur {
